-- ================================================================
-- Projeto: MercadoNexa Marketplace Analytics
-- Arquivo: database/schema.sql
-- Banco: PostgreSQL 14+
-- Objetivo: criar a estrutura OLTP + auditoria + staging + DW simplificado
-- ================================================================

-- Execute este arquivo via psql a partir de uma conexão administrativa:
-- psql -U postgres -f database/schema.sql

CREATE DATABASE mercadonexa_marketplace
    WITH
    ENCODING = 'UTF8'
    TEMPLATE = template0;

\connect mercadonexa_marketplace

SET client_min_messages TO WARNING;
SET TIME ZONE 'America/Sao_Paulo';

-- Extensões utilizadas:
-- pgcrypto: UUIDs e funções criptográficas.
-- citext: e-mails case-insensitive.
-- pg_trgm: busca textual aproximada em catálogo.
CREATE EXTENSION IF NOT EXISTS pgcrypto;
CREATE EXTENSION IF NOT EXISTS citext;
CREATE EXTENSION IF NOT EXISTS pg_trgm;

-- Organização por bounded contexts.
CREATE SCHEMA IF NOT EXISTS core;
CREATE SCHEMA IF NOT EXISTS catalog;
CREATE SCHEMA IF NOT EXISTS sales;
CREATE SCHEMA IF NOT EXISTS fulfillment;
CREATE SCHEMA IF NOT EXISTS finance;
CREATE SCHEMA IF NOT EXISTS audit;
CREATE SCHEMA IF NOT EXISTS staging;
CREATE SCHEMA IF NOT EXISTS dw;

-- ================================================================
-- CORE: tenants, clientes e sellers
-- ================================================================

CREATE TABLE core.tenants (
    tenant_id          UUID PRIMARY KEY DEFAULT gen_random_uuid(),
    tenant_name        VARCHAR(120) NOT NULL,
    legal_name         VARCHAR(180) NOT NULL,
    tax_id             VARCHAR(32) NOT NULL UNIQUE,
    plan_type          VARCHAR(30) NOT NULL DEFAULT 'professional',
    status             VARCHAR(20) NOT NULL DEFAULT 'active',
    billing_email      CITEXT NOT NULL,
    created_at         TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at         TIMESTAMPTZ NOT NULL DEFAULT now(),
    deleted_at         TIMESTAMPTZ,
    CONSTRAINT ck_tenants_plan_type
        CHECK (plan_type IN ('starter', 'professional', 'enterprise')),
    CONSTRAINT ck_tenants_status
        CHECK (status IN ('active', 'suspended', 'cancelled')),
    CONSTRAINT ck_tenants_soft_delete
        CHECK (deleted_at IS NULL OR deleted_at >= created_at)
);

CREATE TABLE core.customers (
    customer_id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id           UUID NOT NULL REFERENCES core.tenants (tenant_id),
    first_name          VARCHAR(80) NOT NULL,
    last_name           VARCHAR(120) NOT NULL,
    email               CITEXT NOT NULL,
    document_number     VARCHAR(32) NOT NULL,
    phone               VARCHAR(30),
    birth_date          DATE,
    gender              VARCHAR(20),
    acquisition_channel VARCHAR(40) NOT NULL DEFAULT 'organic',
    status              VARCHAR(20) NOT NULL DEFAULT 'active',
    marketing_opt_in    BOOLEAN NOT NULL DEFAULT false,
    created_at          TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at          TIMESTAMPTZ NOT NULL DEFAULT now(),
    deleted_at          TIMESTAMPTZ,
    CONSTRAINT uq_customers_email_per_tenant UNIQUE (tenant_id, email),
    CONSTRAINT uq_customers_document_per_tenant UNIQUE (tenant_id, document_number),
    CONSTRAINT ck_customers_gender
        CHECK (gender IS NULL OR gender IN ('female', 'male', 'non_binary', 'not_informed')),
    CONSTRAINT ck_customers_channel
        CHECK (acquisition_channel IN ('organic', 'paid_search', 'social', 'referral', 'affiliate', 'marketplace_app')),
    CONSTRAINT ck_customers_status
        CHECK (status IN ('active', 'blocked', 'inactive')),
    CONSTRAINT ck_customers_birth_date
        CHECK (birth_date IS NULL OR birth_date <= current_date - INTERVAL '16 years'),
    CONSTRAINT ck_customers_soft_delete
        CHECK (deleted_at IS NULL OR deleted_at >= created_at)
);

CREATE TABLE core.customer_addresses (
    address_id      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id       UUID NOT NULL REFERENCES core.tenants (tenant_id),
    customer_id     BIGINT NOT NULL REFERENCES core.customers (customer_id),
    address_type    VARCHAR(20) NOT NULL DEFAULT 'shipping',
    street          VARCHAR(160) NOT NULL,
    number          VARCHAR(20) NOT NULL,
    complement      VARCHAR(80),
    district        VARCHAR(80) NOT NULL,
    city            VARCHAR(80) NOT NULL,
    state_code      CHAR(2) NOT NULL,
    postal_code     VARCHAR(12) NOT NULL,
    country_code    CHAR(2) NOT NULL DEFAULT 'BR',
    is_default      BOOLEAN NOT NULL DEFAULT false,
    created_at      TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at      TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT ck_customer_addresses_type
        CHECK (address_type IN ('shipping', 'billing')),
    CONSTRAINT ck_customer_addresses_state
        CHECK (state_code ~ '^[A-Z]{2}$')
);

CREATE TABLE core.sellers (
    seller_id             BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id             UUID NOT NULL REFERENCES core.tenants (tenant_id),
    seller_name           VARCHAR(140) NOT NULL,
    legal_name            VARCHAR(180) NOT NULL,
    tax_id                VARCHAR(32) NOT NULL,
    contact_email         CITEXT NOT NULL,
    contact_phone         VARCHAR(30),
    seller_segment        VARCHAR(40) NOT NULL,
    onboarding_date       DATE NOT NULL DEFAULT current_date,
    commission_rate       NUMERIC(5,4) NOT NULL DEFAULT 0.1200,
    quality_score         NUMERIC(5,2) NOT NULL DEFAULT 80.00,
    status                VARCHAR(20) NOT NULL DEFAULT 'active',
    created_at            TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at            TIMESTAMPTZ NOT NULL DEFAULT now(),
    deleted_at            TIMESTAMPTZ,
    CONSTRAINT uq_sellers_tax_id_per_tenant UNIQUE (tenant_id, tax_id),
    CONSTRAINT uq_sellers_email_per_tenant UNIQUE (tenant_id, contact_email),
    CONSTRAINT ck_sellers_segment
        CHECK (seller_segment IN ('electronics', 'home', 'fashion', 'beauty', 'sports', 'books', 'grocery', 'long_tail')),
    CONSTRAINT ck_sellers_commission
        CHECK (commission_rate >= 0.0300 AND commission_rate <= 0.3500),
    CONSTRAINT ck_sellers_quality
        CHECK (quality_score >= 0 AND quality_score <= 100),
    CONSTRAINT ck_sellers_status
        CHECK (status IN ('active', 'paused', 'under_review', 'blocked')),
    CONSTRAINT ck_sellers_soft_delete
        CHECK (deleted_at IS NULL OR deleted_at >= created_at)
);

-- ================================================================
-- CATALOG: categorias, produtos e historico de precos
-- ================================================================

CREATE TABLE catalog.categories (
    category_id        BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id          UUID NOT NULL REFERENCES core.tenants (tenant_id),
    parent_category_id BIGINT REFERENCES catalog.categories (category_id),
    category_name      VARCHAR(120) NOT NULL,
    slug               VARCHAR(140) NOT NULL,
    category_level     SMALLINT NOT NULL DEFAULT 1,
    is_active          BOOLEAN NOT NULL DEFAULT true,
    created_at         TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at         TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT uq_categories_slug_per_tenant UNIQUE (tenant_id, slug),
    CONSTRAINT ck_categories_level CHECK (category_level BETWEEN 1 AND 5),
    CONSTRAINT ck_categories_no_self_parent
        CHECK (parent_category_id IS NULL OR parent_category_id <> category_id)
);

CREATE TABLE catalog.products (
    product_id        BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id         UUID NOT NULL REFERENCES core.tenants (tenant_id),
    seller_id         BIGINT NOT NULL REFERENCES core.sellers (seller_id),
    category_id       BIGINT NOT NULL REFERENCES catalog.categories (category_id),
    sku               VARCHAR(60) NOT NULL,
    product_name      VARCHAR(180) NOT NULL,
    description       TEXT,
    brand             VARCHAR(80),
    condition_type    VARCHAR(20) NOT NULL DEFAULT 'new',
    weight_kg         NUMERIC(10,3) NOT NULL DEFAULT 0.100,
    length_cm         NUMERIC(10,2) NOT NULL DEFAULT 10.00,
    width_cm          NUMERIC(10,2) NOT NULL DEFAULT 10.00,
    height_cm         NUMERIC(10,2) NOT NULL DEFAULT 5.00,
    status            VARCHAR(20) NOT NULL DEFAULT 'active',
    created_at        TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at        TIMESTAMPTZ NOT NULL DEFAULT now(),
    deleted_at        TIMESTAMPTZ,
    CONSTRAINT uq_products_sku_per_tenant UNIQUE (tenant_id, sku),
    CONSTRAINT ck_products_condition
        CHECK (condition_type IN ('new', 'refurbished', 'used')),
    CONSTRAINT ck_products_dimensions
        CHECK (weight_kg > 0 AND length_cm > 0 AND width_cm > 0 AND height_cm > 0),
    CONSTRAINT ck_products_status
        CHECK (status IN ('draft', 'active', 'paused', 'archived')),
    CONSTRAINT ck_products_soft_delete
        CHECK (deleted_at IS NULL OR deleted_at >= created_at)
);

CREATE TABLE catalog.product_price_history (
    product_price_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id         UUID NOT NULL REFERENCES core.tenants (tenant_id),
    product_id        BIGINT NOT NULL REFERENCES catalog.products (product_id),
    price             NUMERIC(12,2) NOT NULL,
    cost_amount       NUMERIC(12,2) NOT NULL,
    margin_percent    NUMERIC(7,2)
        GENERATED ALWAYS AS (
            CASE
                WHEN price > 0 THEN round(((price - cost_amount) / price) * 100, 2)
                ELSE 0
            END
        ) STORED,
    valid_from        TIMESTAMPTZ NOT NULL DEFAULT now(),
    valid_to          TIMESTAMPTZ,
    is_current        BOOLEAN NOT NULL DEFAULT true,
    created_at        TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT ck_product_price_positive
        CHECK (price > 0 AND cost_amount >= 0 AND cost_amount <= price),
    CONSTRAINT ck_product_price_validity
        CHECK (valid_to IS NULL OR valid_to > valid_from)
);

CREATE TABLE catalog.product_version_history (
    product_version_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id          UUID NOT NULL REFERENCES core.tenants (tenant_id),
    product_id         BIGINT NOT NULL REFERENCES catalog.products (product_id),
    version_number     INTEGER NOT NULL,
    product_snapshot   JSONB NOT NULL,
    changed_by         VARCHAR(120) NOT NULL DEFAULT current_user,
    changed_at         TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT uq_product_version UNIQUE (product_id, version_number),
    CONSTRAINT ck_product_version_positive CHECK (version_number > 0)
);

-- ================================================================
-- FULFILLMENT: armazens, estoque e movimentacoes
-- ================================================================

CREATE TABLE fulfillment.warehouses (
    warehouse_id    BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id       UUID NOT NULL REFERENCES core.tenants (tenant_id),
    warehouse_code  VARCHAR(30) NOT NULL,
    warehouse_name  VARCHAR(120) NOT NULL,
    city            VARCHAR(80) NOT NULL,
    state_code      CHAR(2) NOT NULL,
    postal_code     VARCHAR(12) NOT NULL,
    is_active       BOOLEAN NOT NULL DEFAULT true,
    created_at      TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at      TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT uq_warehouses_code_per_tenant UNIQUE (tenant_id, warehouse_code),
    CONSTRAINT ck_warehouses_state CHECK (state_code ~ '^[A-Z]{2}$')
);

CREATE TABLE fulfillment.inventory (
    inventory_id       BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id          UUID NOT NULL REFERENCES core.tenants (tenant_id),
    warehouse_id       BIGINT NOT NULL REFERENCES fulfillment.warehouses (warehouse_id),
    product_id         BIGINT NOT NULL REFERENCES catalog.products (product_id),
    quantity_on_hand   INTEGER NOT NULL DEFAULT 0,
    quantity_reserved  INTEGER NOT NULL DEFAULT 0,
    safety_stock       INTEGER NOT NULL DEFAULT 0,
    last_counted_at    TIMESTAMPTZ,
    updated_at         TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT uq_inventory_product_warehouse UNIQUE (warehouse_id, product_id),
    CONSTRAINT ck_inventory_quantities
        CHECK (
            quantity_on_hand >= 0
            AND quantity_reserved >= 0
            AND safety_stock >= 0
            AND quantity_reserved <= quantity_on_hand
        )
);

CREATE TABLE fulfillment.inventory_movements (
    movement_id       BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id         UUID NOT NULL REFERENCES core.tenants (tenant_id),
    warehouse_id      BIGINT NOT NULL REFERENCES fulfillment.warehouses (warehouse_id),
    product_id        BIGINT NOT NULL REFERENCES catalog.products (product_id),
    movement_type     VARCHAR(30) NOT NULL,
    quantity_delta    INTEGER NOT NULL,
    balance_after     INTEGER,
    reference_table   VARCHAR(80),
    reference_id      BIGINT,
    reason            VARCHAR(240),
    created_at        TIMESTAMPTZ NOT NULL DEFAULT now(),
    created_by        VARCHAR(120) NOT NULL DEFAULT current_user,
    CONSTRAINT ck_inventory_movements_type
        CHECK (movement_type IN ('purchase', 'reservation', 'sale', 'return', 'adjustment', 'cancellation')),
    CONSTRAINT ck_inventory_movements_delta CHECK (quantity_delta <> 0)
);

-- ================================================================
-- SALES: pedidos, itens, pagamentos, status e devolucoes
-- ================================================================

CREATE TABLE sales.orders (
    order_id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id         UUID NOT NULL REFERENCES core.tenants (tenant_id),
    customer_id       BIGINT NOT NULL REFERENCES core.customers (customer_id),
    order_number      VARCHAR(40) NOT NULL,
    order_status      VARCHAR(30) NOT NULL DEFAULT 'created',
    sales_channel     VARCHAR(40) NOT NULL DEFAULT 'web',
    order_date        TIMESTAMPTZ NOT NULL DEFAULT now(),
    approved_at       TIMESTAMPTZ,
    shipped_at        TIMESTAMPTZ,
    delivered_at      TIMESTAMPTZ,
    cancelled_at      TIMESTAMPTZ,
    subtotal_amount   NUMERIC(14,2) NOT NULL DEFAULT 0,
    discount_amount   NUMERIC(14,2) NOT NULL DEFAULT 0,
    freight_amount    NUMERIC(14,2) NOT NULL DEFAULT 0,
    tax_amount        NUMERIC(14,2) NOT NULL DEFAULT 0,
    commission_amount NUMERIC(14,2) NOT NULL DEFAULT 0,
    total_amount      NUMERIC(14,2) NOT NULL DEFAULT 0,
    currency_code     CHAR(3) NOT NULL DEFAULT 'BRL',
    coupon_code       VARCHAR(40),
    created_at        TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at        TIMESTAMPTZ NOT NULL DEFAULT now(),
    deleted_at        TIMESTAMPTZ,
    CONSTRAINT uq_orders_number_per_tenant UNIQUE (tenant_id, order_number),
    CONSTRAINT ck_orders_status
        CHECK (order_status IN ('created', 'approved', 'paid', 'picking', 'shipped', 'delivered', 'cancelled', 'refunded')),
    CONSTRAINT ck_orders_channel
        CHECK (sales_channel IN ('web', 'mobile_app', 'api', 'marketplace_partner')),
    CONSTRAINT ck_orders_amounts
        CHECK (
            subtotal_amount >= 0
            AND discount_amount >= 0
            AND freight_amount >= 0
            AND tax_amount >= 0
            AND commission_amount >= 0
            AND total_amount >= 0
        ),
    CONSTRAINT ck_orders_currency CHECK (currency_code = 'BRL'),
    CONSTRAINT ck_orders_status_dates
        CHECK (
            (approved_at IS NULL OR approved_at >= order_date)
            AND (shipped_at IS NULL OR approved_at IS NOT NULL)
            AND (delivered_at IS NULL OR shipped_at IS NOT NULL)
            AND (cancelled_at IS NULL OR delivered_at IS NULL)
        ),
    CONSTRAINT ck_orders_soft_delete
        CHECK (deleted_at IS NULL OR deleted_at >= created_at)
);

CREATE TABLE sales.order_items (
    order_item_id     BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id          UUID NOT NULL REFERENCES core.tenants (tenant_id),
    order_id           BIGINT NOT NULL REFERENCES sales.orders (order_id) ON DELETE RESTRICT,
    product_id         BIGINT NOT NULL REFERENCES catalog.products (product_id),
    seller_id          BIGINT NOT NULL REFERENCES core.sellers (seller_id),
    quantity           INTEGER NOT NULL,
    unit_price         NUMERIC(12,2) NOT NULL,
    unit_cost          NUMERIC(12,2) NOT NULL DEFAULT 0,
    discount_amount    NUMERIC(12,2) NOT NULL DEFAULT 0,
    tax_amount         NUMERIC(12,2) NOT NULL DEFAULT 0,
    commission_rate    NUMERIC(5,4) NOT NULL,
    gross_amount       NUMERIC(14,2)
        GENERATED ALWAYS AS (quantity * unit_price) STORED,
    line_total_amount  NUMERIC(14,2)
        GENERATED ALWAYS AS ((quantity * unit_price) - discount_amount + tax_amount) STORED,
    commission_amount  NUMERIC(14,2)
        GENERATED ALWAYS AS (((quantity * unit_price) - discount_amount) * commission_rate) STORED,
    created_at         TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT ck_order_items_quantity CHECK (quantity > 0),
    CONSTRAINT ck_order_items_values
        CHECK (unit_price > 0 AND unit_cost >= 0 AND discount_amount >= 0 AND tax_amount >= 0),
    CONSTRAINT ck_order_items_commission CHECK (commission_rate BETWEEN 0.0300 AND 0.3500)
);

CREATE TABLE sales.payments (
    payment_id       BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id        UUID NOT NULL REFERENCES core.tenants (tenant_id),
    order_id         BIGINT NOT NULL REFERENCES sales.orders (order_id),
    payment_method   VARCHAR(30) NOT NULL,
    payment_status   VARCHAR(30) NOT NULL DEFAULT 'pending',
    amount           NUMERIC(14,2) NOT NULL,
    installments     SMALLINT NOT NULL DEFAULT 1,
    transaction_code VARCHAR(80) NOT NULL,
    authorized_at    TIMESTAMPTZ,
    paid_at          TIMESTAMPTZ,
    created_at       TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT uq_payments_transaction UNIQUE (transaction_code),
    CONSTRAINT ck_payments_method
        CHECK (payment_method IN ('credit_card', 'debit_card', 'pix', 'boleto', 'wallet')),
    CONSTRAINT ck_payments_status
        CHECK (payment_status IN ('pending', 'authorized', 'paid', 'failed', 'refunded', 'chargeback')),
    CONSTRAINT ck_payments_amount CHECK (amount >= 0),
    CONSTRAINT ck_payments_installments CHECK (installments BETWEEN 1 AND 12)
);

CREATE TABLE sales.order_status_history (
    status_history_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id          UUID NOT NULL REFERENCES core.tenants (tenant_id),
    order_id           BIGINT NOT NULL REFERENCES sales.orders (order_id),
    old_status         VARCHAR(30),
    new_status         VARCHAR(30) NOT NULL,
    changed_by         VARCHAR(120) NOT NULL DEFAULT current_user,
    changed_at         TIMESTAMPTZ NOT NULL DEFAULT now(),
    reason             VARCHAR(240)
);

CREATE TABLE sales.returns (
    return_id        BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id        UUID NOT NULL REFERENCES core.tenants (tenant_id),
    order_item_id    BIGINT NOT NULL REFERENCES sales.order_items (order_item_id),
    return_reason    VARCHAR(40) NOT NULL,
    return_status    VARCHAR(30) NOT NULL DEFAULT 'requested',
    requested_at     TIMESTAMPTZ NOT NULL DEFAULT now(),
    resolved_at      TIMESTAMPTZ,
    refund_amount    NUMERIC(14,2) NOT NULL DEFAULT 0,
    CONSTRAINT ck_returns_reason
        CHECK (return_reason IN ('damaged', 'late_delivery', 'wrong_item', 'regret', 'defective', 'other')),
    CONSTRAINT ck_returns_status
        CHECK (return_status IN ('requested', 'approved', 'rejected', 'received', 'refunded')),
    CONSTRAINT ck_returns_refund CHECK (refund_amount >= 0),
    CONSTRAINT ck_returns_dates CHECK (resolved_at IS NULL OR resolved_at >= requested_at)
);

-- ================================================================
-- FINANCE: repasses aos sellers
-- ================================================================

CREATE TABLE finance.seller_payouts (
    payout_id         BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id         UUID NOT NULL REFERENCES core.tenants (tenant_id),
    seller_id         BIGINT NOT NULL REFERENCES core.sellers (seller_id),
    period_start      DATE NOT NULL,
    period_end        DATE NOT NULL,
    gross_amount      NUMERIC(14,2) NOT NULL DEFAULT 0,
    commission_amount NUMERIC(14,2) NOT NULL DEFAULT 0,
    refund_amount     NUMERIC(14,2) NOT NULL DEFAULT 0,
    net_amount        NUMERIC(14,2) NOT NULL DEFAULT 0,
    payout_status     VARCHAR(30) NOT NULL DEFAULT 'calculated',
    paid_at           TIMESTAMPTZ,
    created_at        TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT uq_seller_payout_period UNIQUE (tenant_id, seller_id, period_start, period_end),
    CONSTRAINT ck_seller_payout_period CHECK (period_end >= period_start),
    CONSTRAINT ck_seller_payout_amounts
        CHECK (
            gross_amount >= 0
            AND commission_amount >= 0
            AND refund_amount >= 0
            AND net_amount >= 0
        ),
    CONSTRAINT ck_seller_payout_status
        CHECK (payout_status IN ('calculated', 'approved', 'paid', 'blocked'))
);

-- ================================================================
-- AUDIT: log generico particionado por data
-- ================================================================

CREATE TABLE audit.audit_log (
    audit_id       BIGINT GENERATED BY DEFAULT AS IDENTITY,
    changed_at     TIMESTAMPTZ NOT NULL DEFAULT now(),
    schema_name    TEXT NOT NULL,
    table_name     TEXT NOT NULL,
    operation      CHAR(1) NOT NULL,
    record_pk      TEXT,
    old_data       JSONB,
    new_data       JSONB,
    changed_by     TEXT NOT NULL DEFAULT current_user,
    request_id     UUID DEFAULT gen_random_uuid(),
    CONSTRAINT pk_audit_log PRIMARY KEY (audit_id, changed_at),
    CONSTRAINT ck_audit_operation CHECK (operation IN ('I', 'U', 'D'))
) PARTITION BY RANGE (changed_at);

CREATE TABLE audit.audit_log_2024 PARTITION OF audit.audit_log
    FOR VALUES FROM ('2024-01-01') TO ('2025-01-01');

CREATE TABLE audit.audit_log_2025 PARTITION OF audit.audit_log
    FOR VALUES FROM ('2025-01-01') TO ('2026-01-01');

CREATE TABLE audit.audit_log_2026 PARTITION OF audit.audit_log
    FOR VALUES FROM ('2026-01-01') TO ('2027-01-01');

CREATE TABLE audit.audit_log_future PARTITION OF audit.audit_log
    FOR VALUES FROM ('2027-01-01') TO ('2035-01-01');

CREATE TABLE audit.audit_log_default PARTITION OF audit.audit_log DEFAULT;

-- ================================================================
-- STAGING: exemplo de area de landing para ETL incremental
-- ================================================================

CREATE TABLE staging.raw_order_events (
    raw_event_id      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id         UUID NOT NULL,
    source_system     VARCHAR(60) NOT NULL,
    event_type        VARCHAR(60) NOT NULL,
    event_payload     JSONB NOT NULL,
    ingested_at       TIMESTAMPTZ NOT NULL DEFAULT now(),
    processed_at      TIMESTAMPTZ,
    processing_status VARCHAR(30) NOT NULL DEFAULT 'pending',
    CONSTRAINT ck_raw_order_events_status
        CHECK (processing_status IN ('pending', 'processed', 'failed'))
);

-- ================================================================
-- DW: data warehouse simplificado em estrela
-- Grain da fato: um item de pedido aprovado/pago/entregue.
-- ================================================================

CREATE TABLE dw.dim_date (
    date_key       INTEGER PRIMARY KEY,
    full_date      DATE NOT NULL UNIQUE,
    year_number    INTEGER NOT NULL,
    quarter_number INTEGER NOT NULL,
    month_number   INTEGER NOT NULL,
    month_name     VARCHAR(20) NOT NULL,
    day_number     INTEGER NOT NULL,
    week_number    INTEGER NOT NULL,
    is_weekend     BOOLEAN NOT NULL
);

CREATE TABLE dw.dim_customer (
    customer_key        BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id           UUID NOT NULL,
    customer_id         BIGINT NOT NULL,
    customer_name       VARCHAR(220) NOT NULL,
    email               CITEXT NOT NULL,
    acquisition_channel VARCHAR(40) NOT NULL,
    status              VARCHAR(20) NOT NULL,
    valid_from          TIMESTAMPTZ NOT NULL DEFAULT now(),
    valid_to            TIMESTAMPTZ,
    is_current          BOOLEAN NOT NULL DEFAULT true,
    CONSTRAINT uq_dim_customer_current UNIQUE (tenant_id, customer_id, valid_from)
);

CREATE TABLE dw.dim_product (
    product_key      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id         UUID NOT NULL,
    product_id        BIGINT NOT NULL,
    sku               VARCHAR(60) NOT NULL,
    product_name      VARCHAR(180) NOT NULL,
    category_name     VARCHAR(120) NOT NULL,
    brand             VARCHAR(80),
    seller_id         BIGINT NOT NULL,
    valid_from        TIMESTAMPTZ NOT NULL DEFAULT now(),
    valid_to          TIMESTAMPTZ,
    is_current        BOOLEAN NOT NULL DEFAULT true,
    CONSTRAINT uq_dim_product_current UNIQUE (tenant_id, product_id, valid_from)
);

CREATE TABLE dw.dim_seller (
    seller_key      BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id        UUID NOT NULL,
    seller_id        BIGINT NOT NULL,
    seller_name      VARCHAR(140) NOT NULL,
    seller_segment   VARCHAR(40) NOT NULL,
    quality_score    NUMERIC(5,2) NOT NULL,
    valid_from       TIMESTAMPTZ NOT NULL DEFAULT now(),
    valid_to         TIMESTAMPTZ,
    is_current       BOOLEAN NOT NULL DEFAULT true,
    CONSTRAINT uq_dim_seller_current UNIQUE (tenant_id, seller_id, valid_from)
);

CREATE TABLE dw.fact_order_items (
    fact_order_item_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    tenant_id           UUID NOT NULL,
    date_key            INTEGER NOT NULL REFERENCES dw.dim_date (date_key),
    customer_key        BIGINT NOT NULL REFERENCES dw.dim_customer (customer_key),
    product_key         BIGINT NOT NULL REFERENCES dw.dim_product (product_key),
    seller_key          BIGINT NOT NULL REFERENCES dw.dim_seller (seller_key),
    order_id            BIGINT NOT NULL,
    order_item_id       BIGINT NOT NULL,
    quantity            INTEGER NOT NULL,
    gross_revenue       NUMERIC(14,2) NOT NULL,
    discount_amount     NUMERIC(14,2) NOT NULL,
    tax_amount          NUMERIC(14,2) NOT NULL,
    net_revenue         NUMERIC(14,2) NOT NULL,
    commission_amount   NUMERIC(14,2) NOT NULL,
    product_cost        NUMERIC(14,2) NOT NULL,
    contribution_margin NUMERIC(14,2) NOT NULL,
    loaded_at           TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT uq_fact_order_item UNIQUE (tenant_id, order_item_id),
    CONSTRAINT ck_fact_order_items_values
        CHECK (
            quantity > 0
            AND gross_revenue >= 0
            AND discount_amount >= 0
            AND tax_amount >= 0
            AND net_revenue >= 0
            AND commission_amount >= 0
            AND product_cost >= 0
        )
);

COMMENT ON DATABASE mercadonexa_marketplace IS 'Projeto profissional de banco de dados PostgreSQL para marketplace multi-tenant.';
COMMENT ON SCHEMA core IS 'Entidades mestre: tenants, clientes, enderecos e sellers.';
COMMENT ON SCHEMA catalog IS 'Catalogo normalizado de categorias, produtos e historico de precos.';
COMMENT ON SCHEMA sales IS 'Fluxo transacional de pedidos, itens, pagamentos, status e devolucoes.';
COMMENT ON SCHEMA fulfillment IS 'Controle de armazens, posicao de estoque e movimentacoes.';
COMMENT ON SCHEMA finance IS 'Apuracao financeira e repasses aos sellers.';
COMMENT ON SCHEMA audit IS 'Auditoria particionada por data para rastreabilidade.';
COMMENT ON SCHEMA staging IS 'Area de ingestao para eventos brutos e ETL incremental.';
COMMENT ON SCHEMA dw IS 'Data warehouse simplificado em modelo estrela.';
